2015-11-19  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module.c (__libdwfl_module_free): Remove Dwfl_Module Ebl from
	eh_cfi and dwarf_cfi cache if necessary before calling dwarf_end and
	dwarf_cfi_end.

2015-11-13  Chih-Hung Hsieh <chh@google.com>

	* gzip.c (unzip): Move nested functions to file scope.

2015-10-21  Chih-Hung Hsieh <chh@google.com>
	    Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getsrc_file.c (dwfl_module_getsrc_file): Move nested
	functions 'dwarf_line_file', 'dwfl_line', and 'dwfl_line_file' to
	file scope. Rename dwarf_line_file to dwfl_dwarf_line_file. Don't
	use INTUSE.

2015-10-21  Chih-Hung Hsieh <chh@google.com>

	* frame_unwind.c (expr_eval): Move nested function 'push' and 'pop'
	to file scope. Pass used local variables in struct eval_stack.

2015-10-21  Chih-Hung Hsieh <chh@google.com>

	* dwfl_module.c (dwfl_report_module): Move nested function 'use' to
	file scope.

2015-10-09  Josh Stone  <jistone@redhat.com>

	* core-file.c (elf_begin_rand): Replace loff_t with off_t.
	* open.c (decompress): Replace off64_t with off_t.
	* gzip.c (unzip): Likewise.
	* image-header.c (__libdw_image_header): Likewise.
	* libdwflP.h: Likewise in function declarations.
	* argp-std.c (parse_opt): Replace open64 with open.
	* dwfl_build_id_find_elf.c (__libdwfl_open_mod_by_build_id,
	dwfl_build_id_find_elf): Likewise.
	* dwfl_module_getdwarf.c (open_elf_file): Likewise.
	* dwfl_report_elf.c (dwfl_report_elf): Likewise.
	* dwfl_segment_report_module.c (dwfl_segment_report_module): Likewise.
	* link_map.c (report_r_debug): Likewise.
	* offline.c (dwfl_report_offline): Likewise.
	* linux-proc-maps.c (grovel_auxv, get_pid_class,
	dwfl_linux_proc_find_elf): Likewise.
	(read_proc_memory): Replace off64_t with off_t.
	* find-debuginfo.c (find_debuginfo_in_path): Replace stat64 and
	fstat64 with stat and fstat.
	(try_open): Likewise, and replace open64 with open.
	* linux-kernel-modules.c: Manually define open and fopen to open64 and